Fix up some of the margins on wrapped media/widgets

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -619,12 +619,13 @@ a:hover { text-decoration: underline; }
 }
 
 .wrapped_slot>.mediaelement, .wrapped_slot>.widgetContainer{
-	margin: 1rem;
+	margin: 0 0 1rem 0;
 }
-
-
-.wrapped_slot>.mediaelement, .wrapped_slot>.widgetContainer{
-	margin: 1rem;
+.wrapped_slot.right_slot>.mediaelement{
+	margin-left: 1rem;
+}
+.wrapped_slot.right_slot>.mediaelement{
+	margin-right: 1rem;
 }
 
 .wrapped_slot.full_width, .mediainfo.full_width{
